--- a/index.html
+++ b/index.html
@@ -31,7 +31,25 @@
         </div>
     </div>
     <div class="mb2">
-
+        <h1>Some random information</h1>
+        <div class="illustration_images">
+            <figure>
+                <img src="./wolf2.jpg" alt="wolf2">
+                <figcaption>This is some subtext under an illustration or image</figcaption>
+            </figure>
+            <figure>
+                <img src="./wolf2.jpg" alt="wolf2">
+                <figcaption>This is some subtext under an illustration or image</figcaption>
+            </figure>
+            <figure>
+                <img src="./wolf2.jpg" alt="wolf2">
+                <figcaption>This is some subtext under an illustration or image</figcaption>
+            </figure>
+            <figure>
+                <img src="./wolf2.jpg" alt="wolf2">
+                <figcaption>This is some subtext under an illustration or image</figcaption>
+            </figure>
+        </div>
     </div>
     <div class="mb3">
 
