--- a/index.html
+++ b/index.html
@@ -52,13 +52,21 @@
         </div>
     </div>
     <div class="mb3">
-
+        <p style="font-size: 36px; font-weight: lighter;  font-style: italic;   color: #1f2937;">This is an inspiring quote, or a testimonial from a customer. 
+        Maybe it's just filling up space, or maybe people will actually read it. Who knows? All I know is that it looks nice.</p>
+        <div style="text-align: end; font-weight: bold; font-size: 24px;">-Thor, God of Thunder</div>
     </div>
     <div class="mb4">
-
+       <div>
+        <div class="mb4_p">
+            <h1 style="font-size: 24px; font-weight: bold;">Call to action! It's time!</h1>
+            <h2 style="font-size: 18px; font-weight: lighter;">Sign up for our product by clicking the button right over there</h2>
+        </div>
+        <button class="signup">Sign up</button>
+       </div> 
     </div>
     <div class="mb5">
-        <h1 class="copyright">Copyright © The Odin Project 2021</h1>
+        <h1>Copyright © The Odin Project 2021</h1>
     </div>
 </body>
 </html>
